--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ quarkus.datasource.username = root
 quarkus.datasource.password = 1234
 quarkus.datasource.jdbc.url = jdbc:mysql://localhost:3306/petstore?createDatabaseIfNotExist=true
 # drop and create the database at startup (use `update` to only update the schema)
-quarkus.hibernate-orm.database.generation=update
+quarkus.hibernate-orm.database.generation=drop-and-create
 
 
 
